# ros-px4-template

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  justfile  pyproject.toml  tasks.py
config/: markers.yaml
config/marker_maps/: gate_run.yaml  marker_field.yaml
config/missions/: demo.yaml  hover.yaml  inspect_aruco.yaml  marker_hover.yaml  precision_land.yaml  search_relocalize.yaml  yaw_demo.yaml
config/params/: common.yaml  hardware.yaml  mission.yaml  sim.yaml
config/params/overlays/: auto_arm.yaml  hover.yaml  inspect.yaml  marker_hover.yaml  precision_land.yaml  search_relocalize.yaml  yaw_demo.yaml
config/paths/: demo.yaml
config/rviz/: default.rviz  inspect_mission.rviz
docs/: BACKLOG.md  CHALLENGES.md  CLAIMS.md  FRAMES.md  MCP.md  MISSIONS.md  SIM.md  SKEIN.md  TOPICS.md
docs/superpowers/plans/: 2026-05-28-fast-warm-relaunch.md  2026-05-28-honest-bench-relaunch.md  2026-05-29-sim-speed-cleanup.md
docs/superpowers/specs/: 2026-05-28-fast-warm-relaunch-design.md  2026-05-28-honest-bench-relaunch-design.md  2026-05-29-sim-speed-cleanup-design.md
hardware/launch/: hardware.launch.py
missions/: README.md
missions/inspect/launch/: inspect.launch.py
plans/: 001-single-source-agent-docs.md  002-cut-fault-injection.md  003-drop-tracked-devplan-cruft.md  004-correct-backlog-drift.md  005-extract-gz-px4-stack-bash.md  006-enforce-topic-types.md  007-scenario-self-configures-sim.md  008-topic-check-vision-conditional.md  009-record-ros2-bag-during-sim.md  010-retrieve-px4-sitl-ulog-at-teardown.md  011-just-analyze-skein-overlay-query.md  012-fix-analyze-query-arg-forwarding.md  013-skein-sitl-integration-runbook.md  014-skein-venv-per-environment.md  015-remove-stale-missions-dir.md  016-just-mission-validate-list-show.md  017-fix-readme-command-drift.md  018-e2e-propagate-exit-codes.md  019-add-env-example.md  020-lock-mission-manager-snapshot.md  021-extract-and-test-marker-map-parsing.md  022-mission-json-schema.md  023-just-scenario-new-scaffold.md  024-just-scenario-status.md  025-stabilize-centering-timer.md  026-close-bag-recorder-fd.md  027-relocatable-package-resources.md  028-align-package-dependencies.md  029-batch-topic-validation-queries.md  030-fix-auto-arm-disarm-latch.md  031-wait-ready-world-aware-physics.md  032-scenario-failure-reporting.md  033-failure-digest-on-fail.md  034-px4-events-in-summary.md  035-agent-docs-accuracy.md  036-preflight-tests.md  037-gcs-heartbeat-tests.md  038-cache-aruco-detector.md  039-cache-workspace-env-sourcing.md  040-rename-heartbeat-counter-and-cleanups.md  (+50 more)
schemas/: mission.schema.json
sim/launch/: _start_gz_px4.sh  sim_full.launch.py
sim/models/aruco_marker_0/: model.config  model.sdf
sim/models/aruco_marker_1/: model.config  model.sdf
sim/models/aruco_marker_2/: model.config  (+1 more)
sim/worlds/: default.sdf  gate_run.sdf  inspect_aruco.sdf  landing_pad.sdf  marker_field.sdf  obstacle_course.sdf
src/core/: package.xml  setup.cfg  setup.py
src/px4_ros_msgs/: CMakeLists.txt  package.xml
src/px4_ros_msgs/msg/: ControllerStatus.msg  MarkerDetection.msg  MissionStatus.msg
src/px4_ros_sim/: package.xml  setup.cfg  setup.py
src/px4_ros_sim/px4_ros_sim/: aruco_detector.py  sim_pose_adapter.py  sim_pose_lookup.py
tests/: capabilities.toml  conftest.py
tests/scenarios/: 01_arm_takeoff.py  02_hover_hold.py  03_waypoint.py  05_aruco_hover.py  06_search_relocalize.py  07_yaw_control.py  08_precision_land.py  09_aruco_hover_real.py  _common.py  inspect_aruco.py
tests/unit/: test_aruco_detector.py  test_bag_recorder.py  test_bench_relaunch.py  test_cap_evidence.py  test_cap_plan.py  test_cap_status.py  test_capabilities.py  test_check_capabilities.py  test_check_docs.py  test_check_invariants.py  test_check_topics.py  test_cli_verdict.py  test_e2e_report.py  test_e2e_status.py  test_fault_transforms.py  test_frame_transforms.py  test_frames.py  test_gcs_heartbeat.py  test_gen_world.py  test_gz_lifecycle.py  test_hardware_config.py  test_kinematics.py  test_log_capture.py  test_log_processing.py  test_log_summary.py  test_log_view.py  test_marker_assets.py  test_marker_localizer_math.py  test_marker_map.py  test_marker_target.py  test_mission_behaviors.py  test_mission_cli.py  test_mission_core.py  test_mission_engine.py  test_mission_guards.py  test_mission_inputs.py  test_mission_loader.py  test_mission_profile.py  test_mission_runtime.py  test_mission_schema.py  (+31 more)
tools/: bag_recorder.py  bench_relaunch.py  benchmark_startup.py  cap_evidence.py  cap_plan.py  cap_status.py  capabilities.py  check_capabilities.py  check_docs.py  check_invariants.py  check_topics.py  cli_verdict.py  diag_flight.py  e2e_report.py  e2e_sim_test.sh  e2e_status.py  fault_inject.py  gcs_heartbeat.py  gen_marker_assets.py  gen_world.py  gz_lifecycle.py  log_capture.py  log_merger.py  log_pretty.py  log_processing.py  log_query.py  log_summary.py  log_view.py  log_watch.py  mission_cli.py  preflight.py  probes.py  reports.py  run_supervisor.py  scenario_scaffold.py  scenario_status.py  sim_cleanup.py  skein_analyze.py  status.py  ulog_retrieve.py  (+1 more)
vehicles/: x500.yaml
(+130 files in other folders)
