<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_ros_sim</name>
  <version>0.1.0</version>
  <description>Simulation-only nodes (ArUco vision)</description>
  <maintainer email="dev@example.com">Developer</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ros_px4_template_core</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
